# cambioml-protobuf

./: .gitignore  README.md
proto/: documents.proto
python/: pyproject.toml
python/cambioml_protobuf/: documents_pb2.py
python/tests/: test_documents_pb2.py
